<resources>
    <string name="app_name">Lab2</string>
    <string name="hello_message">Hello from Canada</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="button1">button</string>
    <string name="check">Check this out!</string>
    <string name="widget">Here are my widgets:</string>
    <string name="switch1">Switch on / off</string>
    <string name="type">Type your answer in here</string>
    <string name="enterEmail">Enter your email</string>
    <string name="typeEmail">Type email here</string>
    <string name="enterPass">Enter your password</string>

    <string name="login">Login</string>
    <string name="profile">Your profile</string>
    <string name="name">Your name:</string>
    <string name="enterName">Enter your name</string>
    <string name="picture">Your picture:</string>

    <string name="SendBtn">Send</string>
    <string name="ReceiveBtn">Receive</string>
    <string name="ChatInput">Type here</string>

    <string name="item2input">Type here</string>


</resources>