<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/grid_layout"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="4">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widget"
        android:layout_weight="1"
        android:layout_gravity="fill"
        android:layout_columnSpan="2"
        android:textSize="30dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="146dp"
        android:layout_height="wrap_content"

        android:layout_gravity="fill"
        android:layout_weight="1"
        android:text="@string/button1" />


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_weight="1"
        app:srcCompat="@drawable/flag" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:layout_weight="1"

        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch1"
        android:layout_weight="1"
        android:gravity="fill"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/type"
        android:layout_columnSpan="2"/>


</GridLayout>