<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ListView
        android:id="@+id/ListView"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/SendBtn"/>

    <Button
        android:id="@+id/SendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/SendBtn"/>

    <EditText
        android:id="@+id/ChatInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/SendBtn"
        android:layout_toLeftOf="@id/ReceiveBtn"
        android:hint="@string/ChatInput"/>
    <Button
        android:id="@+id/ReceiveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/ReceiveBtn"/>
</RelativeLayout>